<resources>
    <string name="app_name">Burghy</string>
    <string name="welcome">WELCOME TO SUNY PLATTSBURGH</string>

    <!--NAVIGATION DRAWER TABS-->
    <string name="app_home">Home</string>
    <string name="app_campus">Campus</string>
    <string name="app_maps">Maps</string>
    <string name="app_facts">Quick Facts</string>
    <string name="app_tips">Survival Tips</string>

    <string name="app_more">More about Burghy</string>
    <string name="app_settings">Settings</string>

    <string name="nav_demo">Navigation Drawer Demo</string>
    <string name="home_demo">Home Demo</string>
    <string name="campus_demo">Campus Demo</string>
    <string name="maps_demo">Maps Demo</string>
    <string name="facts_demo">Facts Demo</string>
    <string name="tips_demo">Tips Demo</string>

    <string name="action_settings">settings</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>

    <!--LOGIN-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="crateaccount">CREATE AN ACCOUNT</string>

    <!--SIGNUP-->
    <string name="emailplattsburgh">Plattsburgh Email</string>
    <string name="plattsburghpassword">Password</string>
    <string name="bannerid">Banner ID</string>
    <string name="signup">SIGN UP</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>

    <!--NAVIGATION HEADER-->
    <string name="student">STUDENT</string>
    <string name="email">EMAIL</string>
    <string name="title_activity_indoor_maps">Map</string>

    <!--LOG OUT-->
    <string name="remove_user">REMOVE USER</string>
    <string name="btn_sign_out">SIGN OUT</string>
    <string name="email_id">Email ID</string>

    <!--MapsSearchBar-->
    <string name="search">Go</string>
    <string name="text">Where you want to Go?</string>
</resources>
