<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/app_home" />

        <item
            android:id="@+id/campus"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/app_campus" />

        <item
            android:id="@+id/maps"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/app_maps" />

        <item
            android:id="@+id/facts"
            android:icon="@drawable/ic_school_black_24dp"
            android:title="@string/app_facts" />

        <item
            android:id="@+id/tips"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/app_tips" />
    </group>

    <item android:title="@string/app_more">
        <menu>
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_account_circle_black_24dp"
                android:title="@string/app_settings" />
        </menu>
    </item>

</menu>