<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="192dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    android:background="@drawable/navdrawerbackgroundresized"
    android:weightSum="1">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="0.75"
        android:contentDescription="@string/welcome"
        android:src="@drawable/avatarcircle" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="12sp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>


</LinearLayout>