<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/remove_user_button"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/sign_out"
        android:layout_alignStart="@+id/sign_out"
        android:layout_marginBottom="16dp"
        android:text="@string/remove_user"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="408dp" />

    <Button
        android:id="@+id/sign_out"
        style="?android:textAppearanceSmall"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@color/colorPrimary"
        android:text="@string/btn_sign_out"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="42dp"
        tools:layout_editor_absoluteY="456dp" />

    <TextView
        android:id="@+id/useremail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/remove_user_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:gravity="center"
        android:hint="@string/email_id"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

</RelativeLayout>