<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackgroundresized"
    tools:context="com.burghy.burghy.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:id="@+id/linearLayout"
        android:layout_above="@+id/buttonsignup"
        android:layout_alignParentStart="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintText">

            <EditText
                android:id="@+id/signupemail"
                style="@style/box_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/emailplattsburgh"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintText">

            <EditText
                style="@style/box_style"
                android:id="@+id/signuppassword"
                android:layout_marginBottom="10dp"
                android:hint="@string/plattsburghpassword"
                android:textColorHint="@color/colorText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_idnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintText">

            <EditText
                android:id="@+id/signupid"
                style="@style/box_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:hint="@string/bannerid"
                android:inputType="number"
                android:maxLength="9"
                android:maxLines="1"
                android:textColorHint="@color/colorText" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/buttonsignup"
        style="@style/button_style"
        android:text="@string/signup"
        android:textColor="@color/colorText"
        android:elevation="5dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="37dp" />



</RelativeLayout>
