<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginbackgroundresized"
    tools:context="com.burghy.burghy.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginBottom="31dp"
        android:layout_alignBottom="@+id/button1"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintText">

            <EditText
                style="@style/box_style"
                android:id="@+id/boxuser"
                android:layout_marginBottom="20dp"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorText"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/hintText">

            <EditText
                style="@style/box_style"
                android:id="@+id/boxpassword"
                android:layout_marginBottom="10dp"
                android:hint="@string/password"
                android:textColorHint="@color/colorText"
                android:inputType="textPassword"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/button1"
        style="@style/button_style"
        android:text="@string/login"
        android:textColor="@color/colorText"
        android:layout_marginBottom="11dp"
        android:elevation="5dp"
        android:layout_marginStart="21dp"
        android:layout_above="@+id/buttoncreateaccount"
        android:layout_toEndOf="@+id/signInButton" />

    <Button
        android:id="@+id/buttoncreateaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:elevation="5dp"
        android:layout_gravity="center"
        android:text="@string/crateaccount"
        android:textColor="@color/colorText"
        android:layout_marginBottom="13dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_alignTop="@+id/button1"
        android:layout_alignParentStart="true" />

</RelativeLayout>